fix(header): margin and overflow pbs

--- a/asset/css/desktop/results.css
+++ b/asset/css/desktop/results.css
@@ -1,10 +1,12 @@
 @media only screen and (min-width: 992px) {
   .results {
     display: flex;
-    flex-flow: row-reverse;
+    flex-flow: row-reverse nowrap;
+    justify-content: flex-end;
     gap: 40px;
     max-height: 630px;
     /* padding: 0 16px; */
+    width: 100%;
   }
 
   .results > * {
