--- a/asset/css/mobile/header.css
+++ b/asset/css/mobile/header.css
@@ -43,7 +43,7 @@ body > header .menu > a.active {
   color: var(--primary-color);
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   body {
     margin: 0;
   }
